[cmake][doc] set doxygen DOT_PATH

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -34,6 +34,19 @@ if(DOXYGEN_FOUND)
         string(REGEX REPLACE "mscgen$" "" MSCGEN_PATH ${MSCGEN_EXECUTABLE})
     endif()
 
+    # search dot program
+    # for setting the DOT_PATH variable in the Doxyfile
+    find_program(DOT_EXECUTABLE dot)
+
+    if( DOT_EXECUTABLE STREQUAL "DOT_EXECUTABLE-NOTFOUND" )
+        message(STATUS "dot program not found")
+        set(DOT_PATH "")
+    else()
+        # set the DOT_PATH variable by stripping the name (dot)
+        # from the DOT_EXECUTABLE
+        string(REGEX REPLACE "dot$" "" DOT_PATH ${DOT_EXECUTABLE})
+    endif()
+
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in
                    ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
     add_custom_target(dox COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
