Fix compilation on Visual Studio 2013

--- a/src/model_io/urdf/CMakeLists.txt
+++ b/src/model_io/urdf/CMakeLists.txt
@@ -48,7 +48,7 @@ if(IDYNTREE_USES_KDL)
     source_group("Private Header Files" FILES ${IDYNTREE_MODELIO_URDF_PRIVATE_HEADERS})
 
     include_directories(SYSTEM ${urdfdom_headers_INCLUDE_DIRS}
-                            ${urdfdom_INCLUDE_DIRS})
+                               ${urdfdom_INCLUDE_DIRS})
 
     set(libraryname idyntree-modelio-urdf)
 
@@ -56,10 +56,12 @@ if(IDYNTREE_USES_KDL)
                                ${IDYNTREE_MODELIO_URDF_HEADERS}
                                ${IDYNTREE_MODELIO_URDF_PRIVATE_HEADERS})
 
+    get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
+    include_directories(SYSTEM ${IDYNTREE_TREE_INCLUDE_DIRS})
 
+							   
     target_include_directories(${libraryname} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-                                                     "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>"
-                                                      ${IDYNTREE_TREE_INCLUDE_DIRS})
+                                                     "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>")
 
     target_link_libraries(${libraryname} idyntree-core
                                          idyntree-model
