--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -15,6 +15,7 @@ endif()
 if(IDYNTREE_USES_ICUB_MAIN)
   find_package(YARP)
   find_package(ICUB)
+  add_definitions(-D_USE_MATH_DEFINES)
   add_executable(urdf2dh urdf2dh)
   target_include_directories(urdf2dh PUBLIC ${ICUB_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS})
   target_link_libraries(urdf2dh iKin idyntree-core idyntree-regressors  idyntree-modelio-urdf idyntree-modelio-ikin)
