--- a/src/sensors/CMakeLists.txt
+++ b/src/sensors/CMakeLists.txt
@@ -10,17 +10,11 @@ get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DI
 
 include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
 
-#include system headers
-include_directories(SYSTEM ${orocos_kdl_INCLUDE_DIRS}
-                            ${EIGEN3_INCLUDE_DIR})
-
 set(IDYNTREE_SENSORS_HEADERS include/iDynTree/Sensors/Sensors.h
                              include/iDynTree/Sensors/SixAxisFTSensor.h
                              include/iDynTree/Sensors/Gyroscope.h
                              include/iDynTree/Sensors/Accelerometer.h
                              include/iDynTree/Sensors/PredictSensorsMeasurements.h)
-
-#file (GLOB IDYNTREE_BASE_PRIVATE_INCLUDES)
 
 set(IDYNTREE_SENSORS_SOURCES src/Sensors.cpp
                              src/SixAxisFTSensor.cpp
@@ -28,20 +22,22 @@ set(IDYNTREE_SENSORS_SOURCES src/Sensors.cpp
                              src/Gyroscope.cpp
                              src/PredictSensorsMeasurements.cpp)
 
-               
+
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_SENSORS_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_SENSORS_HEADERS})
-#SOURCE_GROUP("Header Files\\Private" FILES ${IDYNTREE_SENSORS_PRIVATE_INCLUDES})
 
 set(libraryname idyntree-sensors)
 
 add_library(${libraryname} ${IDYNTREE_SENSORS_SOURCES} ${IDYNTREE_SENSORS_HEADERS} ${IDYNTREE_SENSORS_PRIVATE_INCLUDES})
 
 target_include_directories(${libraryname} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-                                                "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${${VARS_PREFIX}_INSTALL_INCLUDEDIR}>"
+                                                "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>"
                                           PRIVATE ${EIGEN3_INCLUDE_DIR})
 
-#target_link_libraries(${libraryname} idyntree-core)
+#include system headers
+include_directories(SYSTEM AFTER ${orocos_kdl_INCLUDE_DIRS}
+                            ${EIGEN3_INCLUDE_DIR})
+
 target_link_libraries(${libraryname} idyntree-core idyntree-kdl)
 
 set_property(TARGET ${libraryname} PROPERTY PUBLIC_HEADER ${IDYNTREE_SENSORS_HEADERS})
