--- a/src/model_io/urdf/CMakeLists.txt
+++ b/src/model_io/urdf/CMakeLists.txt
@@ -113,15 +113,15 @@ else()
     target_include_directories(${libraryname} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
                                                      "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>"
                                                       ${IDYNTREE_TREE_INCLUDE_DIRS}
+                                                      ${orocos_kdl_INCLUDE_DIRS}
                                               PRIVATE ${EIGEN3_INCLUDE_DIR}
                                                       ${TinyXML_INCLUDE_DIRS})
 
     target_link_libraries(${libraryname} PUBLIC idyntree-model
                                          PRIVATE ${TinyXML_LIBRARIES})
 
-    target_include_directories(${libraryname} SYSTEM AFTER PUBLIC  ${orocos_kdl_INCLUDE_DIRS}
-                                                           PRIVATE ${EIGEN3_INCLUDE_DIR}
-                                                                   ${TinyXML_INCLUDE_DIRS})
+    target_include_directories(${libraryname} PRIVATE ${EIGEN3_INCLUDE_DIR}
+                                                      ${TinyXML_INCLUDE_DIRS})
 
     set_property(TARGET ${libraryname} PROPERTY PUBLIC_HEADER ${IDYNTREE_MODELIO_URDF_HEADERS})
 
