--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,6 @@ endif()
 #Use options specified in iDynTreeOptions.cmake file
 include(iDynTreeOptions)
 
-
 if(NOT IDYNTREE_ONLY_DOCS)
 # Given an error if yarp or ICUB_MAIN dependencies are selected without KDL
 if(IDYNTREE_USES_ICUB_MAIN)
@@ -103,6 +102,11 @@ install_basic_package_files(iDynTree VARS_PREFIX ${VARS_PREFIX}
 include(AddUninstallTarget)
 
 add_subdirectory(bindings)
+
+# Add reminder to remove include_directories(SYSTEM as soon as we depend on CMake 2.8.12
+if(NOT ${CMAKE_MINIMUM_REQUIRED_VERSION} VERSION_LESS 2.8.12)
+    message(AUTHOR_WARNING "CMAKE_MINIMUM_REQUIRED_VERSION is now ${CMAKE_MINIMUM_REQUIRED_VERSION}. include_directories(SYSTEM ..) can be substituted by target_include_directories(SYSTEM ...).")
+endif()
 
 endif()
 
