[cmake] Fix inclusion of installed headers instead of build ones
See https://github.com/robotology/idyntree/issues/52

--- a/src/icub/CMakeLists.txt
+++ b/src/icub/CMakeLists.txt
@@ -32,16 +32,10 @@ set_target_properties(idyntree-icub PROPERTIES VERSION ${${VARS_PREFIX}_VERSION}
                                            SOVERSION ${${VARS_PREFIX}_VERSION}
                                            PUBLIC_HEADER "${iDynTree_ICUB_header}")
 
-target_include_directories(idyntree-icub PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
+
+target_include_directories(idyntree-icub PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include;${IDYNTREE_TREE_INCLUDE_DIRS}>"
                                                 "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>")
-
-include_directories(SYSTEM ${skinDynLib_INCLUDE_DIRS}
-                           ${iDyn_INCLUDE_DIRS}
-                           ${GSL_INCLUDE_DIRS}
-                           ${YARP_INCLUDE_DIRS}
-                           ${EIGEN3_INCLUDE_DIR}
-                           ${orocos_kdl_INCLUDE_DIRS})
-
 
 target_link_libraries(idyntree-icub LINK_PUBLIC  skinDynLib iKin iDyn
                                             ${GSL_LIBRARIES}
@@ -54,6 +48,13 @@ target_link_libraries(idyntree-icub LINK_PUBLIC  skinDynLib iKin iDyn
                                             ${Boost_LIBRARIES}
                                             ${TinyXML_LIBRARIES})
 
+target_include_directories(idyntree-icub INTERFACE ${skinDynLib_INCLUDE_DIRS})
+
+include_directories(SYSTEM ${skinDynLib_INCLUDE_DIRS}
+                           ${GSL_INCLUDE_DIRS}
+                           ${YARP_INCLUDE_DIRS}
+                           ${EIGEN3_INCLUDE_DIR}
+                           ${orocos_kdl_INCLUDE_DIRS})
 
 install(TARGETS idyntree-icub
         EXPORT iDynTree
