--- a/src/tests/benchmark/CMakeLists.txt
+++ b/src/tests/benchmark/CMakeLists.txt
@@ -4,7 +4,7 @@ macro(add_benchmark benchmarkName)
     set(testsrc ${benchmarkName}Benchmark.cpp)
     set(testbinary ${benchmarkName}Benchmark)
     add_executable(${testbinary} ${testsrc})
-    target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR} ${IDYNTREE_TREE_INCLUDE_DIRS})
+    target_include_directories(${testbinary} PRIVATE ${IDYNTREE_TREE_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
     target_link_libraries(${testbinary} idyntree-modelio-urdf idyntree-core idyntree-kdl idyntree-model)
 endmacro()
 
