[sensors] Add Sensor postfix to Accelerometer and Gyroscope class names
This is necessary because the ACCELEROMETER enum value was mapped in matlab
to the ACCELEROMETER.m file, while the Accelerometer class was mapped to the
Accelerometer.m file. There was not problem in Linux, but in OS X and Windows
the filesystem are case insensitive, and so this clash was causing problems even
when just cloning the repo.

cc @naveenoid

--- a/src/sensors/CMakeLists.txt
+++ b/src/sensors/CMakeLists.txt
@@ -12,14 +12,14 @@ include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
 
 set(IDYNTREE_SENSORS_HEADERS include/iDynTree/Sensors/Sensors.h
                              include/iDynTree/Sensors/SixAxisFTSensor.h
-                             include/iDynTree/Sensors/Gyroscope.h
-                             include/iDynTree/Sensors/Accelerometer.h
+                             include/iDynTree/Sensors/GyroscopeSensor.h
+                             include/iDynTree/Sensors/AccelerometerSensor.h
                              include/iDynTree/Sensors/PredictSensorsMeasurements.h)
 
 set(IDYNTREE_SENSORS_SOURCES src/Sensors.cpp
                              src/SixAxisFTSensor.cpp
-                             src/Accelerometer.cpp
-                             src/Gyroscope.cpp
+                             src/AccelerometerSensor.cpp
+                             src/GyroscopeSensor.cpp
                              src/PredictSensorsMeasurements.cpp)
 
 
