--- a/src/core/tests/CMakeLists.txt
+++ b/src/core/tests/CMakeLists.txt
@@ -21,3 +21,4 @@ add_unit_test(ArticulatedBodyInertia)
 add_unit_test(Twist)
 add_unit_test(Wrench)
 add_unit_test(ExpLog)
+add_unit_test(VectorDynSize)
