create (currently empty) consistency test for external force/torque and internal torques estimation

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -9,8 +9,11 @@ if(IDYNTREE_USES_KDL)
     # Benchmarks against old RNEA & CRBA based on kdl
     add_subdirectory(benchmark)
 
-    # Add a subdirectory of all the consistency tests between the old
-    # "kdl_codyco" implementations and the new native iDynTree implementations
-    add_subdirectory(kdl_consistency)
+    if(IDYNTREE_USES_ICUB_MAIN)
+        # Add a subdirectory of all the consistency tests between the old
+        # iCub-dependent external force/internal torque estimation
+        #  implementations and the new native iDynTree implementations
+        add_subdirectory(icub_consistency)
+    endif()
 
 endif()
