--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,7 @@ if(IDYNTREE_USES_KDL)
     add_subdirectory(regressors)
     if(IDYNTREE_USES_YARP)
         add_subdirectory(yarp)
-        add_subdirectory(estimation)
+        add_subdirectory(estimation-kdl)
         if(IDYNTREE_USES_ICUB_MAIN)
             add_subdirectory(icub)
         endif()
