--- a/src/icub/tests/CMakeLists.txt
+++ b/src/icub/tests/CMakeLists.txt
@@ -27,3 +27,4 @@ add_icub_test(iDynTreeWholeBodyFTsensorEstimate)
 add_icub_test(iDynTreeExportFixedJointsFrames)
 add_icub_test(iDynTreeExternalWrenchesEstimation)
 add_icub_test(iDynTreeiCubExternalWrenchesEstimation)
+add_icub_test(AdjointMatricesConsistency)
