--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,9 @@ clone_folder: c:\projects\idyntree
 environment:
   Eigen3_DIR:          C:/Program Files (x86)/Eigen/lib/cmake/eigen3/
 
+os:
+ - Visual Studio 2013
+ - Visual Studio 2015
 
 install:
 
@@ -17,7 +20,7 @@ build_script:
   - cd tinyxml 
   - md build
   - cd build 
-  - cmake -G"Visual Studio 11" ..
+  - cmake ..
   - msbuild /m /p:Configuration=Release /p:Platform="Win32" tinyxml.sln
   - cmake --build . --config Release
   - cmake --build . --config Release --target INSTALL
@@ -27,7 +30,7 @@ build_script:
   - cd eigen
   - md build
   - cd build 
-  - cmake -G"Visual Studio 11" ..
+  - cmake ..
   - cmake --build . --config Release --target INSTALL
   # compile iDynTree
   - cd c:\projects\idyntree
