[test] add benchmark between GSL and Eigen SVD

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -10,6 +10,9 @@ if(IDYNTREE_USES_KDL)
     add_subdirectory(benchmark)
 
     if(IDYNTREE_USES_ICUB_MAIN)
+        # Add benchmark test against yarp/icub functions
+        add_subdirectory(yarp_benchmark)
+
         # Add a subdirectory of all the consistency tests between the old
         # iCub-dependent external force/internal torque estimation
         #  implementations and the new native iDynTree implementations
