Moved code that is dependent on both icub-main and KDL to icub-kdl

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,10 @@ add_subdirectory(sensors)
 add_subdirectory(model_io)
 add_subdirectory(estimation)
 
+if(IDYNTREE_USES_ICUB_MAIN)
+    add_subdirectory(icub)
+endif()
+
 if(IDYNTREE_USES_KDL)
     add_subdirectory(kdl)
     add_subdirectory(regressors)
@@ -18,7 +22,7 @@ if(IDYNTREE_USES_KDL)
         add_subdirectory(yarp)
         add_subdirectory(estimation-kdl)
         if(IDYNTREE_USES_ICUB_MAIN)
-            add_subdirectory(icub)
+            add_subdirectory(icub-kdl)
         endif()
     endif()
     add_subdirectory(high-level)
