imcomplete implementation of tests for the new external wrenches estimation

--- a/src/icub-kdl/tests/CMakeLists.txt
+++ b/src/icub-kdl/tests/CMakeLists.txt
@@ -26,4 +26,4 @@ add_icub_test(iDynTreeRelativeJacobian)
 add_icub_test(iDynTreeWholeBodyFTsensorEstimate)
 add_icub_test(iDynTreeExportFixedJointsFrames)
 add_icub_test(iDynTreeExternalWrenchesEstimation)
-add_icub_test(AdjointMatricesConsistency)
+#add_icub_test(AdjointMatricesConsistency)
