Renamed yarp sublibrary to yarp-kdl

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,7 @@ if(IDYNTREE_USES_KDL)
     add_subdirectory(kdl)
     add_subdirectory(regressors)
     if(IDYNTREE_USES_YARP)
-        add_subdirectory(yarp)
+        add_subdirectory(yarp-kdl)
         add_subdirectory(estimation-kdl)
         if(IDYNTREE_USES_ICUB_MAIN)
             add_subdirectory(icub-kdl)
