--- a/src/model_io/tests/CMakeLists.txt
+++ b/src/model_io/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories(SYSTEM ${orocos_kdl_INCLUDE_DIRS})
 
 add_executable(check_urdf_import_export check_urdf_import_export.cpp)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/format_examples/urdf/black_icub.urdf ${CMAKE_CURRENT_BINARY_DIR}/black_icub.urdf)
-target_link_libraries(check_urdf_import_export idyntree-kdl idyntree-modelio-urdf ${orocos_kdl_LIBRARIES} ${urdfdom_LIBRARIES})
+target_link_libraries(check_urdf_import_export idyntree-kdl idyntree-modelio-urdf-kdl ${orocos_kdl_LIBRARIES} ${urdfdom_LIBRARIES})
 add_test(NAME test_urdf_import_export COMMAND check_urdf_import_export black_icub.urdf)
 
 
@@ -21,7 +21,7 @@ if(IDYNTREE_USES_ICUB_MAIN)
     find_package(ICUB REQUIRED)
     include_directories(SYSTEM ${ICUB_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS})
     add_executable(check_iKin_export_random_chain check_iKin_export_random_chain.cpp)
-    target_link_libraries(check_iKin_export_random_chain idyntree-core idyntree-modelio-urdf idyntree-modelio-ikin ${YARP_LIBRARIES} iKin)
+    target_link_libraries(check_iKin_export_random_chain idyntree-core idyntree-modelio-urdf-kdl idyntree-modelio-ikin ${YARP_LIBRARIES} iKin)
     add_test(NAME test_check_iKin_export_random_chain COMMAND check_iKin_export_random_chain)
 
 endif()
