--- a/src/tests/kdl_tests/CMakeLists.txt
+++ b/src/tests/kdl_tests/CMakeLists.txt
@@ -32,12 +32,12 @@ add_all_components_test(DynamicsComputationsConsistency)
   find_package(ICUB)
   add_executable(urdf2dh_test urdf2dh_tests.cpp)
   target_include_directories(urdf2dh_test PUBLIC ${ICUB_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS})
-  target_link_libraries(urdf2dh_test iKin idyntree-kdl idyntree-yarp-kdl idyntree-icub idyntree-regressors  idyntree-modelio-urdf idyntree-modelio-ikin)
+  target_link_libraries(urdf2dh_test iKin idyntree-kdl idyntree-yarp-kdl idyntree-icub idyntree-regressors  idyntree-modelio-urdf-kdl idyntree-modelio-ikin)
   # \todo reenable this test
   #add_test(NAME test_urdf2dh COMMAND urdf2dh_test urdf_icub_test.urdf)
 endif()
 
 add_executable(urdf_forward_kinematics urdf_forward_kinematics.cpp)
-target_link_libraries(urdf_forward_kinematics idyntree-core idyntree-kdl idyntree-modelio-urdf ${orocos_kdl_LIBRARIES})
+target_link_libraries(urdf_forward_kinematics idyntree-core idyntree-kdl idyntree-modelio-urdf-kdl ${orocos_kdl_LIBRARIES})
 
 #add_test(NAME test_urdf_forward_kinematics  COMMAND urdf_forward_kinematics black_icub.urdf root_link r_hip_3)
