--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -1,6 +1,6 @@
 macro(IDYNTREE_ADD_TOOL tool_name tool_code)
     add_executable(${tool_name} ${tool_code})
-    target_link_libraries(${tool_name} idyntree-core idyntree-regressors idyntree-modelio-urdf idyntree-modelio-symoro)
+    target_link_libraries(${tool_name} idyntree-core idyntree-regressors idyntree-modelio-urdf-kdl idyntree-modelio-symoro)
     include_directories(SYSTEM ${EIGEN3_INCLUDE_DIR} ${orocos_kdl_INCLUDE_DIRS})
     install(TARGETS ${tool_name} DESTINATION bin)
 endmacro(IDYNTREE_ADD_TOOL tool_name tool_code)
@@ -15,6 +15,6 @@ if(IDYNTREE_USES_ICUB_MAIN)
   add_definitions(-D_USE_MATH_DEFINES)
   add_executable(urdf2dh urdf2dh)
   target_include_directories(urdf2dh PUBLIC ${ICUB_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS})
-  target_link_libraries(urdf2dh iKin idyntree-core idyntree-regressors  idyntree-modelio-urdf idyntree-modelio-ikin)
+  target_link_libraries(urdf2dh iKin idyntree-core idyntree-regressors  idyntree-modelio-urdf-kdl idyntree-modelio-ikin)
   install(TARGETS urdf2dh DESTINATION bin)
 endif()
