--- a/src/model_io/urdf/CMakeLists.txt
+++ b/src/model_io/urdf/CMakeLists.txt
@@ -6,13 +6,11 @@ project(iDynTree_ModelIO_URDF CXX)
 
 set(IDYNTREE_MODELIO_URDF_HEADERS include/iDynTree/ModelIO/URDFModelImport.h
                                   include/iDynTree/ModelIO/URDFDofsImport.h
-                                  include/iDynTree/ModelIO/URDFGenericSensorsImport.h
-                                  include/iDynTree/ModelIO/urdf_generic_sensor_import.hpp)
+                                  include/iDynTree/ModelIO/URDFGenericSensorsImport.h)
 
 set(IDYNTREE_MODELIO_URDF_SOURCES src/URDFModelImport.cpp
                                   src/URDFDofsImport.cpp
-                                  src/URDFGenericSensorsImport.cpp
-                                  src/urdf_generic_sensor_import.cpp)
+                                  src/URDFGenericSensorsImport.cpp)
 
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_MODELIO_URDF_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_MODELIO_URDF_HEADERS})
