[Model] Fix bug in Model copy constructor and copy operator
Additional frames where not appropriatly copied from a model to another.
Added regression test to ensure that this bug is not reintroduced.

--- a/src/tests/data/CMakeLists.txt
+++ b/src/tests/data/CMakeLists.txt
@@ -14,7 +14,8 @@ set(IDYNTREE_TESTS_URDFS icub.urdf
                          twoLinksFixed.urdf
                          oneLink.urdf
                          icubTwoLinks.urdf
-                         robotModelTestTwoLinks.urdf)
+                         robotModelTestTwoLinks.urdf
+                         iCubGenova02.urdf)
 
 
 # configure an header containing the path
