--- a/src/tests/data/testModels.h.in
+++ b/src/tests/data/testModels.h.in
@@ -20,10 +20,11 @@ const char *IDYNTREE_TESTS_URDFS[] = {"oneLink.urdf",
                                       "icub_skin_frames.urdf",
                                       "bigman.urdf",
                                       "robotModelTestTwoLinks.urdf",
-                                      "icub2BB5Sea.urdf"
+                                      "icub2BB5Sea.urdf",
+                                      "iCubGenova02.urdf"
 };
 
-const unsigned int IDYNTREE_TESTS_URDFS_NR = 11;
+const unsigned int IDYNTREE_TESTS_URDFS_NR = 12;
 
 inline std::string getAbsModelPath(std::string modelName)
 {
