--- a/src/tests/integration/CMakeLists.txt
+++ b/src/tests/integration/CMakeLists.txt
@@ -6,7 +6,7 @@ macro(add_integration_test testname)
     set(testtarget   IntegrationTest${testname})
     add_executable(${testbinary} ${testsrc})
     target_include_directories(${testbinary} PRIVATE ${IDYNTREE_TREE_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
-    target_link_libraries(${testbinary} idyntree-core idyntree-model idyntree-modelio-urdf-kdl)
+    target_link_libraries(${testbinary} idyntree-core idyntree-model idyntree-modelio-urdf)
     add_test(NAME ${testtarget} COMMAND ${testbinary})
 
     if(IDYNTREE_RUN_VALGRIND_TESTS)
@@ -20,7 +20,7 @@ macro(add_integration_exe testname)
     set(testtarget   IntegrationTest${testname})
     add_executable(${testbinary} ${testsrc})
     target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR} ${IDYNTREE_TREE_INCLUDE_DIRS})
-    target_link_libraries(${testbinary} idyntree-core idyntree-model idyntree-modelio-urdf-kdl)
+    target_link_libraries(${testbinary} idyntree-core idyntree-model idyntree-modelio-urdf)
 endmacro()
 
 add_integration_test(Dynamics)
